--- a/pills_visualization/www/graph/index.html
+++ b/pills_visualization/www/graph/index.html
@@ -282,7 +282,7 @@ $(document).ready(function () {
                 }]
             },
             options: options,
-            plugins: [ChartDataLabels]
+            // plugins: [ChartDataLabels]
         });
     }
 }
@@ -352,7 +352,7 @@ function createBarChart(chartId, type, label, data, color, indexAxis = "x") {
     // 🔥 Add datalabels customization for bar charts
     if (type === 'bar') {
         options.plugins.datalabels = {
-            color: '#000',
+            color: '#fff',
             font: {
                 weight: 'bold',
                 size: 14
